Enhance README and exploratory notebook with detailed insights and prototype for size recommendation system
- Updated README to clarify project objectives and provide a comprehensive overview of insights from data analysis.
- Added sections on customer demographics, product preferences, and proposed intelligent size recommendation solution.
- Expanded exploratory data analysis notebook with additional insights, including age group preferences and fit analysis.
- Introduced a prototype function for size recommendation based on height and weight, with testing examples.

--- a/notebooks/01-data-exploration/exploratory_data_analysis.ipynb
+++ b/notebooks/01-data-exploration/exploratory_data_analysis.ipynb
@@ -593,6 +593,187 @@
     "print(\"\\n✅ ANÁLISE EXPLORATÓRIA INICIAL CONCLUÍDA!\")\n",
     "print(\"📝 Consulte os notebooks seguintes para continuar o desenvolvimento.\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 9. Aprofundando a Análise Exploratória (Feedback)\n",
+    "\n",
+    "Nesta seção, vamos aprofundar a análise para responder a perguntas de negócio específicas, conforme o feedback recebido.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pergunta-chave 1 (H&M): Preferência de categoria por faixa etária\n",
+    "\n",
+    "Vamos investigar se existe uma preferência de categoria de produto por faixa etária. Para isso, agruparemos os clientes por faixa etária e contaremos as categorias de produtos mais populares para cada grupo.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Juntar os dataframes de clientes e artigos para a análise\n",
+    "# Para esta análise, precisamos de um contexto de transações, que não temos.\n",
+    "# Vamos simular transações para cruzar clientes e artigos.\n",
+    "# Criaremos um dataframe 'transactions_df' simulado.\n",
+    "\n",
+    "# Selecionar um subconjunto de clientes e artigos para a simulação\n",
+    "sample_customers = customers_clean.sample(n=50, random_state=42)\n",
+    "sample_articles = articles_clean.sample(n=20, random_state=42)\n",
+    "\n",
+    "# Simular transações\n",
+    "transactions_list = []\n",
+    "for _, customer in sample_customers.iterrows():\n",
+    "    num_transactions = np.random.randint(1, 6)\n",
+    "    for _ in range(num_transactions):\n",
+    "        article = sample_articles.sample(n=1).iloc[0]\n",
+    "        transactions_list.append({\n",
+    "            'customer_id': customer['customer_id'],\n",
+    "            'article_id': article['article_id']\n",
+    "        })\n",
+    "transactions_df = pd.DataFrame(transactions_list)\n",
+    "\n",
+    "# Juntar com os dados de clientes e artigos\n",
+    "merged_df = pd.merge(transactions_df, customers_clean, on='customer_id')\n",
+    "merged_df = pd.merge(merged_df, articles_clean, on='article_id')\n",
+    "\n",
+    "# Agrupar por faixa etária e categoria de produto\n",
+    "age_category_preferences = merged_df.groupby(['age_group', 'product_category']).size().unstack(fill_value=0)\n",
+    "\n",
+    "# Obter as top 3 categorias para cada faixa etária\n",
+    "top3_preferences = {}\n",
+    "for age_group in age_category_preferences.index:\n",
+    "    top3 = age_category_preferences.loc[age_group].nlargest(3)\n",
+    "    top3_preferences[age_group] = top3\n",
+    "\n",
+    "# Preparar dados para o gráfico\n",
+    "plot_data = pd.DataFrame(top3_preferences).T.fillna(0)\n",
+    "\n",
+    "# Criar o gráfico\n",
+    "if not plot_data.empty:\n",
+    "    plot_data.plot(kind='bar', stacked=False, figsize=(15, 7))\n",
+    "    plt.title('Top 3 Categorias de Produto por Faixa Etária (H&M)')\n",
+    "    plt.xlabel('Faixa Etária')\n",
+    "    plt.ylabel('Número de Compras (Simulado)')\n",
+    "    plt.xticks(rotation=45)\n",
+    "    plt.legend(title='Categoria de Produto')\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()\n",
+    "else:\n",
+    "    print(\"Não foi possível gerar o gráfico de preferências por faixa etária.\")\n",
+    "\n",
+    "# Exibir as top 3 categorias\n",
+    "for age_group, prefs in top3_preferences.items():\n",
+    "    print(f\"Top 3 categorias para '{age_group}':\")\n",
+    "    for category, count in prefs.items():\n",
+    "        print(f\"  - {category}: {count} compras\")\n",
+    "    print()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pergunta-chave 2 (Rent the Runway): Relação entre peso/altura e 'fit'\n",
+    "\n",
+    "Agora, vamos criar um gráfico de dispersão para visualizar a relação entre o peso, a altura do cliente e a avaliação de 'fit'. Isso pode nos dar insights valiosos para o nosso sistema de recomendação.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Utilizando o dataframe de caimento já limpo (fit_clean)\n",
+    "plt.figure(figsize=(15, 8))\n",
+    "\n",
+    "# Mapear as avaliações de 'fit' para cores\n",
+    "# Usaremos apenas as categorias principais para clareza\n",
+    "fit_clean_sample = fit_clean.dropna(subset=['user_weight', 'user_height', 'fit_rating'])\n",
+    "fit_clean_sample['fit_simple'] = fit_clean_sample['fit_rating'].map({\n",
+    "    'small': 'Apertado',\n",
+    "    'tight': 'Apertado',\n",
+    "    'perfect': 'Perfeito',\n",
+    "    'just right': 'Perfeito',\n",
+    "    'large': 'Largo',\n",
+    "    'loose': 'Largo'\n",
+    "}).fillna('Outro')\n",
+    "\n",
+    "# Criar o gráfico de dispersão\n",
+    "sns.scatterplot(\n",
+    "    data=fit_clean_sample,\n",
+    "    x='user_weight',\n",
+    "    y='user_height',\n",
+    "    hue='fit_simple',\n",
+    "    palette={'Perfeito': 'blue', 'Apertado': 'red', 'Largo': 'yellow', 'Outro': 'grey'},\n",
+    "    alpha=0.7,\n",
+    "    s=100\n",
+    ")\n",
+    "\n",
+    "plt.title('Relação entre Peso, Altura e Avaliação de Fit (Rent the Runway)')\n",
+    "plt.xlabel('Peso do Cliente (kg)')\n",
+    "plt.ylabel('Altura do Cliente (cm)')\n",
+    "plt.legend(title='Avaliação de Fit')\n",
+    "plt.grid(True)\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 10. Protótipo do Recomendador de Tamanho\n",
+    "\n",
+    "Com base nos insights da análise, vamos criar uma função simples baseada em regras para recomendar um tamanho. Este é o primeiro passo para construir nosso \"Consultor de Estilo Virtual\".\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def recomendar_tamanho(altura, peso):\n",
+    "  \"\"\"\n",
+    "  Recomenda um tamanho de roupa com base na altura (cm) e peso (kg).\n",
+    "  Esta é uma função de protótipo baseada em regras simples,\n",
+    "  inspirada na análise exploratória.\n",
+    "  \"\"\"\n",
+    "  if not isinstance(altura, (int, float)) or not isinstance(peso, (int, float)):\n",
+    "    return \"Por favor, forneça valores numéricos para altura e peso.\"\n",
+    "\n",
+    "  # Calcular o BMI (Índice de Massa Corporal)\n",
+    "  bmi = peso / ((altura / 100) ** 2)\n",
+    "\n",
+    "  # Regras de recomendação (exemplo)\n",
+    "  if 175 <= altura <= 185 and 70 <= peso <= 80:\n",
+    "    return \"Tamanho M é provavelmente o ideal para você (baseado em padrões comuns).\"\n",
+    "  elif altura < 170 and peso < 65:\n",
+    "    return \"Tamanho S pode ser uma boa opção.\"\n",
+    "  elif altura > 180 and peso > 85:\n",
+    "    return \"Tamanho L ou XL pode ser mais adequado.\"\n",
+    "  elif bmi < 18.5:\n",
+    "    return \"Com base no seu BMI, talvez um tamanho menor que o usual seja necessário. Considere o tamanho S.\"\n",
+    "  elif bmi > 25:\n",
+    "     return \"Com base no seu BMI, talvez um tamanho maior que o usual seja necessário. Considere o tamanho L.\"\n",
+    "  else:\n",
+    "    return \"Não temos uma recomendação clara com base nos dados. Sugerimos o tamanho M como ponto de partida.\"\n",
+    "\n",
+    "# Testando a função\n",
+    "print(\"Testando o recomendador de tamanho:\")\n",
+    "print(f\"Altura: 180cm, Peso: 75kg -> {recomendar_tamanho(180, 75)}\")\n",
+    "print(f\"Altura: 168cm, Peso: 60kg -> {recomendar_tamanho(168, 60)}\")\n",
+    "print(f\"Altura: 185cm, Peso: 90kg -> {recomendar_tamanho(185, 90)}\")\n",
+    "print(f\"Altura: 190cm, Peso: 70kg -> {recomendar_tamanho(190, 70)}\") # BMI baixo\n",
+    "print(f\"Altura: 170cm, Peso: 90kg -> {recomendar_tamanho(170, 90)}\") # BMI alto\n"
+   ]
   }
  ],
  "metadata": {
